--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
     "cSpell.ignoreWords": [
         "baulbasaur",
         "pikachu",
-        "squirtle"
+        "qanswer",
+        "qlist",
+        "qtext",
+        "squirtle",
+        "uanswer"
     ]
 }
