--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cSpell.words": [
         "exitonclick"
     ],
-    "python.pythonPath": "C:\\Users\\16783\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.9/bin/python3",
     "cSpell.ignoreWords": [
         "baulbasaur",
         "pikachu",
